2001-12-11 Alexander Rawass <alexannika@users.sourceforge.net>

	* interpreter can use c_alike module files

2001-12-10 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* imported vegastrike/src/cmd/script/c_alike
	* modified Makefile.am's and configure.in

2001-12-07 Alexander Rawass <alexannika@users.sourceforge.net>

	* digital hatswitch code can be turned off/on with
	  debug_digital_hatswitch in section joystick


2001-12-06 Alexander Rawass <alexannika@users.sourceforge.net>

	* interpreter:
	  - datatype object
	  - callback 'olist' implements list
	

2001-12-06 Alexander Rawass <alexannika@users.sourceforge.net>

	* interpreter:
	  - moved code out of mission_script.cpp:
	    - added script_variables.cpp
	    - added script_util.cpp
	    - modified cmd/script/Makefile.am


2001-12-04 Alexander Rawass <alexannika@users.sourceforge.net>

	* interpreter:
	  - import of multiple modules
	  - exec in another module
	  - saveVariables
	  - datatype object (not yet)
	* change of dir structure
	  - modified src/Makefile.am src/cmd/Makefile.am configure.in
	  - imported interpreter code at src/cmd/script
	  - imported missions to data/mission
	  - imported modules to data/modules
	* imported doc dir at vegastrike/doc
	  

2001-12-04 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* interpreter:
	  - scripts can have return values
	  - global variables
	  - while works
	  - exec is checked for correct return type

	
2001-12-03 Alexander Rawass <alexannika@users.sourceforge.net>

	* added more script tests
	* improved interpreter
	  - multiple scripts in module
	  - exec to call scripts from scripts
	  - arguments to exec
	* added section "interpreter" to vegastrike.conf
	  added variable "debuglevel" to that section

	
2001-12-02 Alexander Rawass <alexannika@users.sourceforge.net>

	* mission script interpreter working
	* added more testd*.mission files


2001-12-01 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* same seed when in benchmark mode